syntax = "proto3";

package grpcService;

service UserService {
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
  rpc GetUserFile (FileRequest) returns (stream FileChunk);
}

message GetUserRequest {
  string userId = 1;
}

message GetUserPayload {
  string userId = 1;
  string firstName = 2;
  string lastName = 3;
  string email = 4;
}

message GetUserResponse {
  string message = 1;
  GetUserPayload payload = 2;
}

message FileRequest {
  string fileSrc = 1;
  string userId = 2;
}

message FileChunk {
  bytes data = 1;
  string fileMimeType = 2;
  int64 fileSize = 3;
}


